# truly-API

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  build_deploy_arm64.sh  build_deploy_localstack.sh  build_deploy_production.sh  build_deploy_stage.sh  build_lambdas_local.sh  create_ledger.sh  deploy.sh  deploy_arm64.sh  destroy_localstack.sh  destroy_stage.sh  docker-compose.yml  lambdas.json  lambdas.sh  package-lock.json  package.json  readme.md  rust-toolchain.toml  scripts.sh
.config/: hakari.toml
command_tables/: Cargo.toml
command_tables/src/: main.rs
deprecate/lambda_mint/: Cargo.toml
deprecate/lambda_mint/src/: main.rs
deprecate/lib_ledger/: Cargo.toml
deprecate/lib_ledger/src/: lib.rs
lambda_admin/: Cargo.toml
lambda_admin/image/: Dockerfile
lambda_admin/src/: main.rs
lambda_admin/src/my_lambda/: error.rs  get_user_by_id.rs  get_users.rs  mod.rs  password_update_user.rs  promote_user.rs  update_user.rs
lambda_admin_user/: Cargo.toml
lambda_admin_user/src/: main.rs
lambda_admin_user/src/my_lambda/: downgrade_user.rs  get_user_by_id.rs  get_users.rs  mod.rs  password_update_user.rs  promote_user.rs  update_user.rs
lambda_after_hash/: Cargo.toml
lambda_after_hash/image/: Dockerfile
lambda_after_hash/src/: main.rs
lambda_after_hash/src/my_lambda/: after_hash.rs  mod.rs
lambda_after_video/: Cargo.toml
lambda_after_video/src/: main.rs
lambda_after_video/src/my_lambda/: after_video.rs  mod.rs
lambda_alert_similars/: Cargo.toml
lambda_alert_similars/image/: Dockerfile
lambda_alert_similars/src/: lib.rs  main.rs
lambda_alert_similars/src/my_lambda/: mod.rs  similar_found.rs
lambda_alert_similars/tests/: alerting.rs
lambda_error/: Cargo.toml
lambda_error/image/: Dockerfile
lambda_error/src/: lib.rs  main.rs
lambda_error/src/my_lambda/: mod.rs
lambda_license/: Cargo.toml  Dockerfile
lambda_license/image/: Dockerfile
lambda_license/src/: lib.rs  main.rs
lambda_license/src/my_lambda/: create_my_asset.rs  error.rs  mod.rs  update_my_asset.rs
lambda_license/tests/: subscribe.rs
lambda_login/: Cargo.toml
lambda_login/image/: Dockerfile
lambda_login/src/: lambda.rs  main.rs
lambda_login/src/my_lambda/: login.rs  mod.rs  signup.rs
lambda_mint/: Cargo.toml
lambda_mint/src/: main.rs
lambda_mint/src/my_lambda/: mint_nft_async.rs  mod.rs
lambda_notifications/: Cargo.toml
lambda_notifications/image/: Dockerfile
lambda_notifications/src/: lib.rs  main.rs  notificate.rs
lambda_notifications/src/my_lambda/: mod.rs  notificate.rs
lambda_notifications/tests/: alert_notif_test.rs  lib.rs
lib_blockchain/: Cargo.toml  sui.log.2023-06-02
lib_blockchain/res/sui/: README.md
lib_blockchain/src/: lib.rs
lib_blockchain/src/blockchains/: chain.rs  ganache.rs  mod.rs  sui.rs  sui_models.rs
lib_blockchain/src/errors/: blockchain.rs  contract.rs  keypair.rs  mod.rs  nft.rs
lib_blockchain/src/models/: block_tx.rs  mod.rs
lib_blockchain/src/repositories/: block_tx.rs  blockchain.rs  contract.rs  ganache.rs  keypairs.rs  mod.rs  schema_block_tx.rs  schema_blockchain.rs  schema_contract.rs  schema_keypairs.rs
lib_blockchain/src/services/: block_tx.rs  contract.rs  mod.rs  nfts.rs
lib_blockchain/test/: lib.rs  nfts2_tests.rs  nfts_ganache_tests.rs  nfts_sui_tests.rs  nfts_tests.rs
lib_config/: Cargo.toml
lib_config/src/: config.rs  environment.rs  infra.rs  lib.rs  secrets.rs
lib_config/tests/: lib.rs
lib_ledger/: Cargo.toml
lib_ledger/src/: lib.rs
lib_ledger/src/errors/: mod.rs
lib_ledger/src/models/: mod.rs
lib_ledger/src/repository/: mod.rs  schema_ledger.rs
lib_ledger/src/service/: mod.rs
lib_ledger/test/: lib.rs
lib_licenses/: Cargo.toml
lib_licenses/src/: lib.rs
lib_licenses/src/errors/: asset.rs  block_tx.rs  license.rs  mod.rs  nft.rs  notifications.rs  owner.rs  subscription.rs  video.rs
lib_licenses/src/models/: alert_similar.rs  asset.rs  block_tx.rs  contract.rs  hash.rs  license.rs  mod.rs  notification.rs  owner.rs  shorter.rs  subscription.rs  tx.rs  video.rs
lib_licenses/src/ops/: mod.rs
lib_licenses/src/repositories/: alert_similar.rs  assets.rs  block_tx.rs  blockchain.rs  contract.rs  ganache.rs  keypairs.rs  licenses.rs  mod.rs  notifications.rs  owners.rs  schema_alert_similar.rs  schema_asset.rs  schema_block_tx.rs  schema_blockchain.rs  schema_contract.rs  schema_keypairs.rs  schema_licenses.rs  schema_notifications.rs  schema_owners.rs  schema_subscription.rs  shorter.rs  subscription.rs
lib_licenses/src/services/: alert_similar.rs  assets.rs  assets_test.rs  block_tx.rs  contract.rs  licenses.rs  mod.rs  nfts.rs  notifications.rs  owners.rs  subscription.rs  video.rs
lib_licenses/tests/: LightNFT.abi  LightNFT.json  after_video_test.rs  assets_test.rs  common.rs  fathers_sons_test.rs  lib.rs  licenses_test.rs  nfts2_tests.rs  nfts_tests.rs  owners_test.rs  subscription_test.rs
lib_users/: Cargo.toml
lib_users/src/: lib.rs
lib_users/src/errors/: users.rs
lib_users/src/models/: user.rs
lib_users/tests/: lib.rs  login_by_device.rs  login_by_email.rs  login_by_wallet.rs  logins_test.rs  user_update.rs
lib_util_jwt/: Cargo.toml
lib_util_jwt/src/: build.rs  error.rs  jwt.rs  lib.rs  randoms.rs
lib_video_apis/: Cargo.toml
lib_video_apis/src/: lib.rs
lib_video_apis/tests/: facebook_test.rs  instagram_test.rs  runner_test.rs  twitch_test.rs  twitter_test.rs  youtube_test.rs
manual_dep/: Cargo.toml  readme.md
manual_dep/res/: blockchain_development.json  contract_development copy.json  contract_development.json  key_development.txt  secrets_development.json  user_development.json
manual_dep/src/: admin_user.rs  alldeps.rs  async_jobs.rs  blockchains.rs  contracts.rs  main.rs  schemas.rs  secretes.rs  store_key.rs  users.rs
server_http/: Cargo.toml
server_http/src/: main.rs  main_api.rs
truly_cli/: Cargo.toml  readme.md
truly_cli/res/: adminuser_development.json  secrets_development.json
truly_cli/src/: async_jobs.rs  blockchains.rs  contracts.rs  ledger.rs  main.rs  schemas.rs  secretes.rs  secrets.rs  store_key.rs
(+217 files in other folders)
