[workspace]

members = [
    "lib_users",
    "lib_config",
    "lib_licenses",
    "lib_blockchain",
    "lib_util_jwt",
    "lib_async_ops",
    "lambda_login",
    "lambda_user",
    "lambda_mint",
    "lambda_license",
    "lambda_admin",
    "lambda_after_video",
    "server_http",
    "manual_dep"
]


