[workspace]

members = [
    "lib_users",
    "lib_licenses",
    "lib_blockchain",
    "lib_ledger",
    "lib_util_jwt",
    "lambda_login",
    "lambda_user",
    "lambda_mint",
    "lambda_license",
    "lambda_admin",
    "lambda_after_video",
    "server_http",
    "truly_cli",
    "workspace-hack"
]


