[workspace]
resolver = "2"

members = [
    "lib_users",
    "lib_licenses",
    "lib_engage",
    "lib_util_jwt",
    "lambda_login",
    "lambda_user",
    "lambda_license",
    "lambda_admin",
    "lambda_after_hash",
    "lambda_error",
    "lambda_alert_similars",
    "lambda_notifications",
    "truly_cli",
]


