[package]
name="command_tables"
version="0.0.1"
edition = "2021"


[dependencies]
lib_config = { path = "../lib_config" }
lib_licenses = { path = "../lib_licenses" }

chrono = {version="0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
aws-config = "0.53.0"
aws-sdk-dynamodb = "0.23.0"
async-trait = "0.1.61"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3.26"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
