[package]
name="lambda_admin"
version="0.0.1"
edition = "2021"

[[bin]]
name="lambda_admin"
path="src/main.rs"

[dependencies]
lib_users = { path = "../lib_users" }
lib_licenses = { path = "../lib_licenses" }
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_util_jwt = { path = "../lib_util_jwt" }
tower-http = { version="0.4.1", features=["full"]  }
lambda_http = { version = "0.8", features = ["apigw_rest"]}
lambda_runtime = "0.8"
aws_lambda_events = { version = "0.10.0", features = ["apigw", "alb"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
matchit = "0.7.0"
validator = { version = "0.16", features = ["derive"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }



