[package]
name="lambda_alert_similars"
version="0.0.1"
edition = "2021"


[[bin]]
name="lambda_alert_similars"
path="src/bin/main.rs"

[lib]
path = "src/lib.rs"


[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_hash_objs = { git="https://github.com/joanmiespada/truly-shared" }
lib_engage = { path = "../lib_engage" }
tower-http = { version="0.4.4", features=["full"]  }
lambda_http = { version = "0.8", features = ["apigw_rest"]}
lambda_runtime = "0.8"
aws_lambda_events = { version = "0.11.1", features = ["apigw", "alb"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
#tracing = { version = "0.1", features = ["log"] }
#tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
aws-sdk-sqs = "0.35.0"
uuid = { version = "1.5.0", features = ["v4","fast-rng",  "macro-diagnostics",  "serde"]}
log = "0.4.20"

[dev-dependencies]
lambda_alert_similars = { path = "../lambda_alert_similars" }
lib_async_ops = { git = "https://github.com/joanmiespada/truly-shared" }
lib_util_jwt = { path = "../lib_util_jwt" }
aws-sdk-dynamodb = "0.35.0"
env_logger = "0.10.0"
aws-types = "0.57.1"
spectral = "0.6.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
base64 = "0.21.5"
tokio = { version="1.33.0", features=["full"]}
chrono = {version="0.4.31", features = ["serde"] }
http = "0.2.9"
rand = "0.8.5"
random_name_generator = "0.3.6"