[package]
name="lambda_error"
version="0.0.1"
edition = "2021"

[lib]
name = "lambda_error"
path = "src/lib.rs"

[[bin]]
name="lambda_error"
path="src/bin/main.rs"


[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_licenses = { path = "../lib_licenses" }
tower-http = { version="0.5.0", features=["full"]  }
lambda_http = { version = "0.9", features = ["apigw_rest"]}
lambda_runtime = "0.9"
aws_lambda_events = { version = "0.13.0", features = ["apigw", "alb"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
#tracing = { version = "0.1", features = ["log"] }
#tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
aws-sdk-sqs = "1.9.0"
uuid = { version = "1.6.1", features = ["v4","fast-rng",  "macro-diagnostics",  "serde"]}
log = "0.4.20"
