[package]
name="lambda_login"
version="0.0.1"
edition = "2021"

[[bin]]
name="lambda_login"
path="src/main.rs"

[package.metadata.lambda.env]
ENVIRONMENT = "development" # doesn't work! you need to use command line

[dependencies]
lib_users = { path = "../lib_users" }
lib_config = { path = "../lib_config" }
lib_util_jwt = { path = "../lib_util_jwt" }
tower-http = { version="0.3.5", features=["full"]  }
lambda_http = { version = "0.7", features = ["apigw_rest"]}
lambda_runtime = "0.7"
aws_lambda_events = { version = "0.7.2", features = ["apigw", "alb"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tokio = { version = "1", features = ["full"] }

# [package.metadata.lambda.deploy]
# memory = 512                   # Function's memory
# timeout = 60                   # Function's execution timeout
# tracing = "active"             # Tracing mode
# role = "role-full-arn"         # Function's execution role
# env_file = ".env"   # File to load environment variables from
# #env = { "VAR1" = "VAL1" }      # Additional environment variables
# layers = [                     # List of layers to deploy with your function
#     "layer-full-arn"
# ]
 

