[package]
name="lambda_login"
version="0.0.1"
edition = "2021"

[[bin]]
name="lambda_login"
path="src/main.rs"


[dependencies]
lib_users = { path = "../lib_users" }
lib_config = { path = "../lib_config" }
lib_util_jwt = { path = "../lib_util_jwt" }
tower-http = { version="0.4.0", features=["full"]  }
lambda_http = { version = "0.8", features = ["apigw_rest"]}
lambda_runtime = "0.8"
aws_lambda_events = { version = "0.9.0", features = ["apigw", "alb"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

