[package]
name="lambda_mint"
version="0.0.1"
edition = "2021"


[[bin]]
name="lambda_mint"
path="src/main.rs"


[dependencies]
lib_config = { path = "../lib_config" }
lib_licenses = { path = "../lib_licenses" }
lib_async_ops = { path = "../lib_async_ops" }
tower-http = { version="0.3.5", features=["full"]  }
lambda_http = { version = "0.7", features = ["apigw_rest"]}
lambda_runtime = "0.7"
aws_lambda_events = { version = "0.7.3", features = ["apigw", "alb"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
aws-sdk-sqs = "0.24.0"
uuid = { version = "1.2.2", features = ["v4","fast-rng",  "macro-diagnostics",  "serde"]}
