[package]
name="lambda_notifications"
version="0.0.1"
edition = "2021"

[lib]
name="lambda_notifications"
path = "src/lib.rs"

[[bin]]
name="lambda_notifications"
path="src/bin/main.rs"

[[test]]
name="integration"
path="tests/lib.rs"


[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_engage = { path = "../lib_engage" }
lib_users = { path = "../lib_users" }
lib_licenses = { path = "../lib_licenses" }
tower-http = { version="0.4.4", features=["full"]  }
lambda_http = { version = "0.8", features = ["apigw_rest"]}
lambda_runtime = "0.8"
aws_lambda_events = { version = "0.11.1", features = ["apigw", "alb"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4","fast-rng",  "macro-diagnostics",  "serde"]}
log = "0.4.20"
url = "2.4.1"
lettre = "0.11.1"

[dev-dependencies]
lambda_notifications = { path = "../lambda_notifications" }
aws-sdk-dynamodb = "0.34.0"
env_logger = "0.10.0"
aws-types = "0.56.1"
spectral = "0.6.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
base64 = "0.21.5"
tokio = { version="1.33.0", features=["full"]}
chrono = {version="0.4.31", features = ["serde"] }
http = "0.2.9"
