[package]
name="lib_blockchain"
version="0.0.1"
edition = "2021"
autotests = false

[lib]
name="lib_blockchain"
crate-type=["lib"]

[[test]]
name="integration"
path="tests/lib.rs"


[dependencies]
lib_config = { path = "../lib_config" }
lib_async_ops = {path = "../lib_async_ops"}
lib_licenses = {path = "../lib_licenses"}
log = "0.4.17"
chrono = {version="0.4.24", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rust-argon2 = "1.0.0"
aws-config = "0.55.2"
aws-sdk-dynamodb = "0.27.0"
async-trait = "0.1.68"
tracing = { version = "0.1", features = ["log"] }
validator = { version = "0.16", features = ["derive"] }
http = "0.2.9"
http-serde = "1.1.2"
url = {version="2.3.1", features=["serde"] }
hex = "0.4.3"
web3 = {version="0.18.0", default-features = false, features=["http-rustls-tls","signing" ]}
rs-snowflake = "0.6.0"
mac_address = "1.1.4"
secp256k1 = { version = "0.21", features = ["rand"] }
rand = "0.8.5"
aws-sdk-kms = "0.27.0"
aws-sdk-secretsmanager = "0.27.0"
base64 = "0.21.1"
uuid = { version = "1.3.3", features=["v4","fast-rng","macro-diagnostics","serde"]}

[dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.55.2"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
tokio = { version="1.28.1", features=["full"]}
lib_config = { path = "../lib_config" }
ethers = "2.0.4"
base64 = "0.21.1"
ethers-solc = "2.0.4"

