[package]
name="lib_blockchain"
version="0.0.1"
edition = "2021"
autotests = false

[lib]
name="lib_blockchain"
crate-type=["lib"]

[[test]]
name="integration"
path="test/lib.rs"


[dependencies]
lib_config = { path = "../lib_config" }
lib_async_ops = {path = "../lib_async_ops"}
lib_licenses = {path = "../lib_licenses"}
log = "0.4.17"
chrono = {version="0.4.24", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rust-argon2 = "1.0.0"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
async-trait = "0.1.68"
tracing = { version = "0.1", features = ["log"] }
validator = { version = "0.16", features = ["derive"] }
http = "0.2.9"
http-serde = "1.1.2"
url = {version="2.3.1", features=["serde"] }
hex = "0.4.3"
web3 = {version="0.18.0", default-features = false, features=["http-rustls-tls","signing" ]}
#rs-snowflake = "0.6.0"
#mac_address = "1.1.5"
secp256k1 = { version = "=0.21", features = ["rand"] } # for other dependenzies with Ganache it must 0.21
rand = "0.8.5"
aws-sdk-kms = "0.28.0"
aws-sdk-secretsmanager = "0.28.0"
base64 = "0.21.2"
uuid = { version = "1.3.3", features=["v4","fast-rng","macro-diagnostics","serde"]}
#sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "859e0f9"}  # tag="testnet-v1.2.0"}   # tag = "sui-v1.1.1"}
#sui-sdk = { path = "/Users/joanmiquelespadasabat/Projects/clutchy/sui/crates/sui-sdk"}

[dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.55.3"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
tokio = { version="1.28.1", features=["full"]}
lib_config = { path = "../lib_config" }
ethers = "2.0.4"
base64 = "0.21.2"
ethers-solc = "2.0.4"

