[package]
name="lib_config"
version="0.0.1"
edition = "2021"

[lib]
name="lib_config"
crate-type=["lib"]


[dependencies]
actix-web = "4.2.1"
aws-sdk-dynamodb = "0.21.0"
aws-config = "0.51.0"
env_logger = "0.10.0"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"


