[package]
name="lib_config"
version="0.0.1"
edition = "2021"

[lib]
name="lib_config"
crate-type=["lib"]


[dependencies]
actix-web = "4.3.0"
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"
env_logger = "0.10.0"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
aws-sdk-secretsmanager = "0.24.0"
log = "0.4.17"
