[package]
name="lib_config"
version="0.0.1"
edition = "2021"

[lib]
name="lib_config"
crate-type=["lib"]

[[test]]
name="integration"
path="tests/lib.rs"



[dependencies]
actix-web = "4.3.0"
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"
env_logger = "0.10.0"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
aws-sdk-secretsmanager = "0.24.0"
log = "0.4.17"
aws-types = "0.54.1"
aws-sdk-kms = "0.24.0"
base64 = "0.21.0"

[dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.54.1"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
tokio = { version="1.24.2", features=["full"]}
