[package]
name="lib_licenses"
version="0.0.1"
edition = "2021"
autotests = false

[lib]
name="lib_licenses"
crate-type=["lib"]

[[test]]
name="integration"
path="tests/lib.rs"


[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_video_objs = { git="https://github.com/joanmiespada/truly-shared" }
lib_hash_objs = { git="https://github.com/joanmiespada/truly-shared" }
lib_async_ops = { git="https://github.com/joanmiespada/truly-shared" }
log = "0.4.20"
chrono = {version="0.4.31", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
rust-argon2 = "2.0.0"
aws-config = "0.57.1"
aws-sdk-dynamodb = "0.35.0"
async-trait = "0.1.74"
#tracing = { version = "0.1", features = ["log"] }
validator = { version = "0.16", features = ["derive"] }
http = "0.2.9"
http-serde = "1.1.3"
url = {version="2.4.1", features=["serde"] }
hex = "0.4.3"
rand = "0.8.5"
aws-sdk-kms = "0.35.0"
aws-sdk-secretsmanager = "0.35.0"
base64 = "0.21.5"
uuid = { version = "1.5.0", features=["v4","fast-rng","macro-diagnostics","serde"]}
maplit = "1.0.2"
tokio = { version="1.33.0", features=["full"]}
reqwest = {version = "0.11.22" ,features = ["json"]}
lazy_static = "1.4.0"
thiserror = "1.0.50"
derive_builder = "0.12.0"

[target.aarch64-apple-darwin.dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.57.1"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
base64 = "0.21.5"
tokio = { version="1.33.0", features=["full"]}

