[package]
name="lib_users"
version="0.0.1"
edition = "2021"

[lib]
name="lib_users"
crate-type=["lib"]

[[test]]
name="integration"
path="tests/lib.rs"

[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
chrono = {version="0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rust-argon2 = "2.0.0"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.32.0"
async-trait = "0.1.73"
tracing = { version = "0.1", features = ["log"] }
tokio =  { version="1.32.0", features = ["macros"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.9.6"
zxcvbn = "2.2.2"
uuid = { version = "1.4.1", features=["v4","fast-rng","macro-diagnostics","serde"]}


#[dev-dependencies]
[target.aarch64-apple-darwin.dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.56.1"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
tokio = { version="1.32.0", features=["full"]}
aws-sdk-secretsmanager = "0.32.0"

