[package]
name="lib_video_apis"
version="0.0.1"
edition = "2021"

[lib]
name="lib_video_apis"
crate-type=["lib"]


[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_licenses = { path = "../lib_licenses" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
jsonwebtoken = "9.2.0"
log = "0.4.20"
lambda_http = { version = "0.9", features = ["apigw_rest"] }
rand = "0.8.5"
random_name_generator = "0.3.6"
reqwest = {version ="0.11.23", features = ["gzip","json"]}
url = {version="2.5.0", features=["serde"] }
async-trait = "0.1.75"
derive_builder = "0.12.0"
serde_urlencoded = "0.7.1"
uuid = { version = "1.6.1", features=["v4","fast-rng","macro-diagnostics","serde"]}

[dev-dependencies]
tokio = { version="1.35.1", features=["full"]}
lib_async_ops = { git="https://github.com/joanmiespada/truly-shared" }
dotenv = "0.15.0"
env_logger = "0.10.1"
testcontainers = { git="https://github.com/joanmiespada/testcontainers-rs", branch="localstack2"  }
